--- a/f/fr/fre/freelanced.com.html
+++ b/f/fr/fre/freelanced.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freelanced.com privacy policy that was archived on 2013-11-13.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131113134432id_/http%3A//www.freelanced.com/help/privacy.aspx) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freelanced.com privacy policy that was archived on 2014-02-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140225084042id_/http%3A//www.freelanced.com/help/privacy.aspx) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en" style="overflow-y:scroll"><head><title>
 	Privacy Policy - Freelanced.com
@@ -8,12 +8,12 @@
 <meta property="og:description" content="">
 <meta property="og:url" content="http://www.freelanced.com/help/privacy.aspx">
 <meta property="og:type" content="website">
-<meta property="og:image" content="http://www.freelanced.com/images/logos/100x100.png?v=1">
+<meta property="og:image" content="http://www.freelanced.com/images/logos/100x100.png?v=3">
 <link rel="shortcut icon" href="/favicon.ico">
-<link rel="stylesheet" type="text/css" href="/styles/site.css?v=1">
-<link rel="stylesheet" type="text/css" href="/styles/site.aspx?v=1">
+<link rel="stylesheet" type="text/css" href="/styles/site.css?v=3">
+<link rel="stylesheet" type="text/css" href="/styles/site.aspx?v=3">
 <script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-<script type="text/javascript" src="/scripts/core.js?v=1"></script>
+<script type="text/javascript" src="/scripts/core.js?v=3"></script>
 
 		<style type="text/css">
 			.footer,.footer a {color:#FFFFFF}
@@ -43,7 +43,7 @@
 	<body style="margin:0px; background-color:#A6A6E6" itemscope="" itemtype="http://schema.org/WebPage">
 		<form method="post" action="/help/privacy.aspx" id="aspnetForm" style="margin:0px">
 <div class="aspNetHidden">
-<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="DTWN9P00zcGQNGPtiNsOLQVmFNMPtYS6jTEzz1wVPiZCxMCCaIfNuZb7xDf91/07gnDvSKU3k251V9fbgea3DNWX4dY=">
+<input type="hidden" name="__VIEWSTATE" id="__VIEWSTATE" value="uZpCGaItk2DcLENefeJeDpWFktOcitizsLLpwiL+il6V7A/UaLwvU6MThlDcRgvy3CU/TV3m9OB4D5UUWuoJFwxrPmY=">
 </div>
 
 <style type="text/css">
@@ -51,9 +51,9 @@
 .wait img { display:block; }
 </style>
 
-<script src="/WebResource.axd?d=Z6wuNerFHJcykyc643xSRYrheur5I5jDuYQyp4-lKEWnq13cniqq3SOZWNJiuC24r1kIVE2wi0jYJFx5duNrNREBUyGNqiMpqEhbVfS7D5LBeLYz0&amp;t=635178716520000000" type="text/javascript"></script>
-			<div data-white="/WebResource.axd?d=nXmbhJbK6GCMb4D-Lt6RIAv4lajSs9uL-_KPYb4KnhAdGbce-bSiq6YSJVMwxEXMl4-UVtxV1ymmzasZ8H11ZLMbNflOkpvuZU7L9F7Hda1H-1WZ0&amp;t=635178716520000000" data-blue="/WebResource.axd?d=g2VLULzkBX0dh41lP8LnDgfaMC1wRewwbWUPOwLjR55-ix6NDlXw8NzNXidh4utqdzDS7zJ2WYidI-sLqZNABoxZQO6MbU5Ze_qTewsTDc8gJdYA0&amp;t=635178716520000000" id="ctl00_wait" class="wait">
-	<img src="/WebResource.axd?d=nXmbhJbK6GCMb4D-Lt6RIAv4lajSs9uL-_KPYb4KnhAdGbce-bSiq6YSJVMwxEXMl4-UVtxV1ymmzasZ8H11ZLMbNflOkpvuZU7L9F7Hda1H-1WZ0&amp;t=635178716520000000" title="Please wait...">
+<script src="/WebResource.axd?d=Z6wuNerFHJcykyc643xSRYrheur5I5jDuYQyp4-lKEWnq13cniqq3SOZWNJiuC24r1kIVE2wi0jYJFx5duNrNREBUyGNqiMpqEhbVfS7D5LBeLYz0&amp;t=635246848553425869" type="text/javascript"></script>
+			<div data-white="/WebResource.axd?d=nXmbhJbK6GCMb4D-Lt6RIAv4lajSs9uL-_KPYb4KnhAdGbce-bSiq6YSJVMwxEXMl4-UVtxV1ymmzasZ8H11ZLMbNflOkpvuZU7L9F7Hda1H-1WZ0&amp;t=635246848553425869" data-blue="/WebResource.axd?d=g2VLULzkBX0dh41lP8LnDgfaMC1wRewwbWUPOwLjR55-ix6NDlXw8NzNXidh4utqdzDS7zJ2WYidI-sLqZNABoxZQO6MbU5Ze_qTewsTDc8gJdYA0&amp;t=635246848553425869" id="ctl00_wait" class="wait">
+	<img src="/WebResource.axd?d=nXmbhJbK6GCMb4D-Lt6RIAv4lajSs9uL-_KPYb4KnhAdGbce-bSiq6YSJVMwxEXMl4-UVtxV1ymmzasZ8H11ZLMbNflOkpvuZU7L9F7Hda1H-1WZ0&amp;t=635246848553425869" title="Please wait...">
 </div><script type="text/javascript">(function(){$('#ctl00_wait').data('obj', new Wait($('#ctl00_wait')));})();</script>
 			
 			
@@ -62,7 +62,7 @@
 			<div style="background-color:#000066">
 				<div style="width:993px; height:73px; margin-left:auto; margin-right:auto; position:relative; background-color:#000066">
 					<div style="position:absolute; top:2px">
-						<a href="http://www.freelanced.com/" id="ctl00_aLogo"><img src="/images/pages/master/logo.png?v=1" id="ctl00_imgLogo" style="display:block"></a>
+						<a href="http://www.freelanced.com/" id="ctl00_aLogo"><img src="/images/pages/master/logo.png?v=3" id="ctl00_imgLogo" style="display:block"></a>
 					</div>
 					<div style="position:absolute; right:0px">
 						<table cellpadding="0" cellspacing="0" style="margin-left:auto; position:relative; z-index:2">
@@ -71,9 +71,9 @@
 <style type="text/css">
 	.masterbuttonbar a {color:#FFFFFF; font-size:14px; font-weight:bold; text-decoration:none}
 	.masterbuttonbar .button {background-color:#00B800; text-align:center; padding:0px 10px; cursor:pointer}
-	.masterbuttonbar .edgeleft {width:5px; height:40px; background-image:url(/controls/masterbuttonbar/fill.png?v=1); background-position:0px 0px; background-repeat:no-repeat}
-	.masterbuttonbar .edgeright {width:5px; height:40px; background-image:url(/controls/masterbuttonbar/fill.png?v=1); background-position:-7px 0px; background-repeat:no-repeat}
-	.masterbuttonbar .separator {width:2px; height:40px; background-image:url(/controls/masterbuttonbar/fill.png?v=1); background-position:-5px 0px; background-repeat:no-repeat}
+	.masterbuttonbar .edgeleft {width:5px; height:40px; background-image:url(/controls/masterbuttonbar/fill.png?v=3); background-position:0px 0px; background-repeat:no-repeat}
+	.masterbuttonbar .edgeright {width:5px; height:40px; background-image:url(/controls/masterbuttonbar/fill.png?v=3); background-position:-7px 0px; background-repeat:no-repeat}
+	.masterbuttonbar .separator {width:2px; height:40px; background-image:url(/controls/masterbuttonbar/fill.png?v=3); background-position:-5px 0px; background-repeat:no-repeat}
 </style>
 <div id="ctl00_ctl06_divControl" class="masterbuttonbar">
 	<table cellpadding="0" cellspacing="0" style="height:40px">
@@ -99,7 +99,7 @@
 
 			button.click(function(event){
 				if(!$(event.target).is(a))
-					go(a.attr("href"));
+					go(a.prop("href"));
 			}).mouseenter(function(){
 				a.css("text-decoration", "underline");
 			}).mouseleave(function(){
@@ -116,7 +116,7 @@
 	.mastermenu ul {list-style-type:none; margin:0px; padding:0px}
 	.mastermenu li {margin:0px; padding:0px}
 	.mastermenu .mnu {position:relative} 
-	.mastermenu .button {height:40px; font-size:14px; font-weight:bold; cursor:pointer}
+	.mastermenu .button {height:40px; font-size:14px; font-weight:bold; color:#FFFFFF; cursor:default}
 	.mastermenu .buttonseparator {height:30px; border-left:1px solid #1C245C; border-right:1px solid #3A4CC2}
 	.mastermenu .expansion {font-size:13px; position:absolute; display:none}
 	.mastermenu .expansion .items {background-color:#2B388F; padding: 0px 15px}
@@ -124,12 +124,12 @@
 	.mastermenu .expansion .itemseparator {border-top:1px solid #1C245C; border-bottom:1px solid #3A4CC2; margin:0px}
 	.mastermenu .bg1 {background-color:#2B388F}
 	.mastermenu .bg2 {background-color:#000066}
-	.mastermenu .cornerleft {width:5px; height:5px; background-image:url(/controls/mastermenu/menu.png?v=1); background-position:0px 0px; background-repeat:no-repeat}
-	.mastermenu .cornerright {width:5px; height:5px; background-image:url(/controls/mastermenu/menu.png?v=1); background-position:-6px 0px; background-repeat:no-repeat}
-	.mastermenu .shoulderleft {width:5px; height:5px; position:absolute; left:-5px; background-image:url(/controls/mastermenu/menu.png?v=1); background-position:-12px 0px; background-repeat:no-repeat}
-	.mastermenu .shoulderright {width:5px; height:5px; position:absolute; right:-5px; background-image:url(/controls/mastermenu/menu.png?v=1); background-position:-18px 0px; background-repeat:no-repeat}
-	.mastermenu .arrow {width:11px; height:8px; background-image:url(/controls/mastermenu/menu.png?v=1); background-position:-24px 0px; background-repeat:no-repeat}
-	.mastermenu .arrowon {width:11px; height:8px; background-image:url(/controls/mastermenu/menu.png?v=1); background-position:-36px 0px; background-repeat:no-repeat}
+	.mastermenu .cornerleft {width:5px; height:5px; background-image:url(/controls/mastermenu/menu.png?v=3); background-position:0px 0px; background-repeat:no-repeat}
+	.mastermenu .cornerright {width:5px; height:5px; background-image:url(/controls/mastermenu/menu.png?v=3); background-position:-6px 0px; background-repeat:no-repeat}
+	.mastermenu .shoulderleft {width:5px; height:5px; position:absolute; left:-5px; background-image:url(/controls/mastermenu/menu.png?v=3); background-position:-12px 0px; background-repeat:no-repeat}
+	.mastermenu .shoulderright {width:5px; height:5px; position:absolute; right:-5px; background-image:url(/controls/mastermenu/menu.png?v=3); background-position:-18px 0px; background-repeat:no-repeat}
+	.mastermenu .arrow {width:11px; height:8px; background-image:url(/controls/mastermenu/menu.png?v=3); background-position:-24px 0px; background-repeat:no-repeat}
+	.mastermenu .arrowon {width:11px; height:8px; background-image:url(/controls/mastermenu/menu.png?v=3); background-position:-36px 0px; background-repeat:no-repeat}
 </style>
 <div id="ctl00_ctl07_divControl" class="mastermenu">
 	<table cellpadding="0" cellspacing="0">
@@ -271,13 +271,18 @@
 				collapse($(this));
 			});
 
-			aryMenus.find(".button,.item").each(function(){
+			//touch-device support
+			aryMenus.find(".button a").each(function(){
+				$(this).replaceWith("<span>"+ $(this).text() + "</span>");
+			});
+
+			aryMenus.find(".item").each(function(){
 				var item = $(this);
 				var a = item.find("a");
 
 				item.click(function(event){
 					if(!$(event.target).is(a))
-						go(a.attr("href"));
+						go(a.prop("href"));
 				}).mouseenter(function(){
 					a.css("text-decoration", "underline");
 				}).mouseleave(function(){
@@ -357,7 +362,7 @@
 			</div>
 			<div class="footer" style="margin-top:30px; margin-bottom:10px; text-align:center">
 				<div id="ctl00_divFooterLinks"><a href="http://www.freelanced.com/" id="ctl00_aHome" rel="nofollow" style="padding-right:8px;border-right:#FFFFFF 1px solid;">Home</a><a href="http://www.freelanced.com/help/faq.aspx" id="ctl00_aHelp" rel="nofollow" style="padding-left:8px;padding-right:8px;border-right:#FFFFFF 1px solid;">Help</a><a href="http://www.freelanced.com/help/terms.aspx" id="ctl00_aTerms" rel="nofollow" style="padding-left:8px;padding-right:8px;border-right:#FFFFFF 1px solid;">Terms of Service</a><a href="http://www.freelanced.com/help/privacy.aspx" id="ctl00_aPrivacy" rel="nofollow" style="padding-left:8px;padding-right:8px;border-right:#FFFFFF 1px solid;">Privacy Policy</a><a href="http://www.freelanced.com/" style="padding-left:8px;padding-right:8px;border-right:#FFFFFF 1px solid;">Freelance Jobs</a><a href="http://www.freelanced.com/freelancers" style="padding-left:8px;padding-right:8px;border-right:#FFFFFF 1px solid;">Freelancers</a><a href="http://www.freelanced.com/portfolios" style="padding-left:8px;">Portfolios</a></div>
-				<div style="margin-top:5px">© 2013 Freelanced.com.&nbsp;&nbsp;All rights reserved.</div>
+				<div style="margin-top:5px">© 2014 Freelanced.com.&nbsp;&nbsp;All rights reserved.</div>
 			</div>
 			
 			
