--- a/a/ad/adu/adultmatchmaker.com.au.html
+++ b/a/ad/adu/adultmatchmaker.com.au.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the adultmatchmaker.com.au privacy policy that was archived on 2013-11-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131122223741id_/http%3A//www.adultmatchmaker.com.au/Help/Privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the adultmatchmaker.com.au privacy policy that was archived on 2014-02-25.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140225200342id_/http%3A//www.adultmatchmaker.com.au/Help/Privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html><head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -11,7 +11,7 @@
 		<link rel="shortcut icon" href="/favicon.ico">
 		
 
-		<link href="/Css/Common.css?v=1F1B878DE6D42A31FF329DB959B1911B" rel="stylesheet">
+		<link href="/Css/Common.css?v=9E4742508CC6367F3ACD7E7715F804E2" rel="stylesheet">
 <link href="/Css/Content.css?v=75C5B3BF0070C0CE4B1CBBD761C4FF39" rel="stylesheet">
 
 <link href="/Css/custom-theme/jquery-ui-1.10.0.custom.min.css?v=2E9E3D8B33A3EC008A64603D6E657552" rel="stylesheet">
@@ -20,7 +20,7 @@
 
 		
 
-<script type="text/javascript" async="" src="https://ssl.google-analytics.com/ga.js"></script><script type="text/javascript" src="/Js/jquery/jquery-1.7.1.min.js?v=DDB84C1587287B2DF08966081EF063BF"></script>
+<script type="text/javascript" async="" src="https://stats.g.doubleclick.net/dc.js"></script><script type="text/javascript" src="/Js/jquery/jquery-1.7.1.min.js?v=DDB84C1587287B2DF08966081EF063BF"></script>
 <script type="text/javascript" src="/Js/jquery/JSON.js?v=C6BE0BC55CC19FE95115F1E0DBC8B33D"></script>
 <script type="text/javascript" src="/Js/jquery/JCookie.js?v=169CE0FF2BC52F5455B6F351CA2C1A76"></script>
 <script type="text/javascript" src="/Js/jquery/jquery-ui-1.10.0.min.js?v=AAD94C542C7F4B7EBFB105E2118A1C53"></script>
@@ -74,11 +74,12 @@
 
   (function() {
     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    ga.src = ('https:' == document.location.protocol ? 'https://' : 'http://') + 'stats.g.doubleclick.net/dc.js';
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
   })();
 
 </script>
+
 	</head>
 	<body>
 		
@@ -126,21 +127,23 @@
 	<div class="nav">
 		<div class="page-container">
 				<!-- Online Member Count -->
-				<div class="online-users"><a href="/Search/OnlineUsers" title="See who's online!">1,680 members online</a></div>
+				<div class="online-users"><a href="/Search/OnlineUsers" title="See who's online!">1,062 members online</a></div>
 				<!-- Menu -->
 <ul class="sitenav">
 <li><a href="/">Home</a></li>
 
 <li><a href="/Search">Search</a></li>
 
-<li><a href="/Chat">Chat</a></li>
+<li><a href="/features/chat">Chat</a></li>
 
 <li><a href="/Community/ListNotices">Community</a><ul class=" rounded3" style="display: none;">
 <li><a href="/Clubs">Clubs &amp; Groups</a></li>
 
 <li><a href="/Community/ListNotices">Community Notices</a></li>
 
-<li><a href="/Testimonials?page=1">Testimonials</a></li>
+<li><a href="/Testimonials">Testimonials</a></li>
+
+<li><a href="/Stories">Member Stories</a></li>
 
 <li><a href="/DatingAdvice">Blog</a></li>
 
@@ -152,7 +155,7 @@
 
 <li><a href="/Travel">Travel</a></li>
 
-<li><a href="/Help.aspx">Help</a></li>
+<li><a href="/Help">Help</a></li>
 
 </ul>
 					</div>
@@ -240,8 +243,8 @@
 			<li><a href="/search/browse" title="Browse Profiles">Browse</a></li>
 			<li><a href="/Help/TermsOfUse" title="Terms of Use">Terms of Use</a></li>
 				<li><a href="/Help/Privacy" title="Privacy Policy">Privacy Policy</a></li>
-			<li><a href="/Help.aspx" title="Help">Help</a></li>
-			<li><a href="/ContactUs.aspx" title="Contact Us">Contact Us</a></li>
+			<li><a href="/Help" title="Help">Help</a></li>
+			<li><a href="/Support/ContactUs" title="Contact Us">Contact Us</a></li>
 			<li><a href="&#9;/sitemap.aspx&#10;" title="Site Map">Site Map</a></li>
 			<li><a href="http://m.adultmatchmaker.com.au" title="Mobile Site">Mobile Site</a></li>
 				<li><a href="/Affiliates/ManageAffiliation.aspx" title="Affiliates" rel="nofollow">Affiliates</a></li>
