--- a/p/pe/per/perniaspopupshop.com.html
+++ b/p/pe/per/perniaspopupshop.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the perniaspopupshop.com privacy policy that was archived on 2013-12-26.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131226044544id_/http%3A//www.perniaspopupshop.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the perniaspopupshop.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226055552id_/http%3A//www.perniaspopupshop.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head>
     <meta http-equiv="X-UA-Compatible" content="IE=8">
@@ -8,6 +8,8 @@
 <meta name="description" content="Default Description">
 <meta name="keywords" content="Pernia's popup shop">
 <meta name="robots" content="INDEX,FOLLOW">
+
+<meta name="google-site-verification" content="MrfBUu8Ou6D6-nQzWTAKd6L98U4gMV7E5hMnH27EbNY">
 
 <link rel="icon" href="http://cache.perniaspopupshop.com/media/favicon/default/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="http://cache.perniaspopupshop.com/media/favicon/default/favicon.ico" type="image/x-icon">
@@ -72,14 +74,6 @@ var jQry = $.noConflict();
 
 
 
-jQry(window).load(function(){
-
-jQry(".slidesubs").animate({bottom : 20},700, 'swing');
-
-jQry(".closeslidesubs").click(function(){									
-jQry(".slidesubs").animate({bottom : -144},700, 'swing');
-});
-});
 
 
 
