--- a/i/in/inb/inboundio.com.html
+++ b/i/in/inb/inboundio.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the inboundio.com privacy policy that was archived on 2013-11-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131105150312id_/http%3A//www.inboundio.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the inboundio.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226055732id_/http%3A//www.inboundio.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
     <meta charset="utf-8">
@@ -8,11 +8,11 @@
     <title>Privacy Policy | inBoundio</title>
 	<meta name="description" content="">
     <meta content="authenticity_token" name="csrf-param">
-<meta content="bVYxQXfET6yYea5VtQ8bksdwE0Ku6SvCpeVCAitRC50=" name="csrf-token">
+<meta content="lR8RLTniP2QMkx0jzT2jyLW65+8Cya3E+lAnXR1Bagg=" name="csrf-token">
     <!--[if lt IE 9]>
       <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js" type="text/javascript"></script>
     <![endif]-->
-    <link href="/assets/website-142eeda2807cd3a7778c9d1a7b72ceee.css" media="all" rel="stylesheet" type="text/css">
+    <link href="/assets/website-86fd9b66b35fefeeda9d479b402aaf76.css" media="all" rel="stylesheet" type="text/css">
     <!-- link rel="shortcut icon" href="../assets/ico/favicon.png" -->
   </head>
 
@@ -78,17 +78,18 @@
       <div class="row">
         <div class="span3">
           <b>About inBoundio</b><br>
-          <!-- %= link_to "About", "#{root_path}#about" %><br / -->
-          <a href="/about">About</a><br>
-          
-          <a href="http://www.inboundio.com/blog/advanced-internet-marketing-glossary/">Marketing Glossary</a>                  <br>
-        </div>
+        
+          <a href="/about">About Us</a><br>          
+        	 <a href="/services">Our Services</a>
+		  </div>
         <div class="span3">
           <b>Follow inBoundio</b><br>
-          <a href="http://facebook.com/inboundio">Facebook</a>                    <br>
-          <a href="http://twitter.com/inboundio">Twitter</a>                    <br>
+			 <a href="http://www.inboundio.com/blog">Our Blog</a><br>
+          <a href="http://facebook.com/inboundio">Facebook</a><br>
+          <a href="http://twitter.com/inboundio">Twitter</a><br>
           <a href="http://quora.com/inboundio">Quora</a>        <br>
-          <a href="http://www.inboundio.com/blog">Blog</a>
+          <a href="http://www.youtube.com/inboundio">Youtube</a><br>
+			 <a href="http://www.pinterest.com/inboundio">Pinterest</a><br>
         </div>
         <div class="span3">
           <b>Help &amp; Support</b><br>
@@ -102,12 +103,14 @@ mailto:abuse@hotmail.com
 Call: +1 (415)-830-6012
         </div>
         <div class="span3">
+          <b>We are Hiring! </b><br>
+          <a href="http://www.inboundio.com/blog/career/">Career @ InBoundio</a><br><br>	
           <b>Legal </b><br>
           <a href="/tos">Terms</a><br>
           <a href="/privacy">Privacy</a>
         </div><a href="http://www.inboundio.com"></a>
       </div>
-      <p> © inBoundio 2013 </p>
+      <p> © InBoundio 2014 </p>
     </div>
   </div>
   <script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0017/2669.js?439011" async="" type="text/javascript"></script><script async="" src="//www.google-analytics.com/analytics.js"></script><script src="/assets/website.js" type="text/javascript"></script>
