--- a/f/fr/fre/freedreamjobs.com.html
+++ b/f/fr/fre/freedreamjobs.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the freedreamjobs.com privacy policy that was archived on 2013-12-25.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131225120122id_/http%3A//www.freedreamjobs.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the freedreamjobs.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226062840id_/http%3A//freedreamjobs.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML+RDFa 1.0//EN" "http://www.w3.org/MarkUp/DTD/xhtml-rdfa-1.dtd"><html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"><head>
     <title>FreeDreamJobs.com - Privacy Policy</title>
