--- a/2/20/20d/20daypersuasion.com.html
+++ b/2/20/20d/20daypersuasion.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 20daypersuasion.com privacy policy that was archived on 2013-12-22.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131222170954id_/http%3A//www.20daypersuasion.com/privacypolicy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 20daypersuasion.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226165134id_/http%3A//20daypersuasion.com/privacypolicy.html) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><!-- Mirrored from www.20daypersuasion.com/privacypolicy.html by HTTrack Website Copier/3.x [XR&CO'2007], Thu, 03 Jan 2008 21:14:43 GMT --><head>
 <title>Privacy Policy</title>
