--- a/c/ch/chr/chroniclebooks.com.html
+++ b/c/ch/chr/chroniclebooks.com.html
@@ -1,9 +1,9 @@
-<!--The following is the downloaded HTML source of the chroniclebooks.com privacy policy that was archived on 2013-12-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20131208213911id_/http%3A//www.chroniclebooks.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the chroniclebooks.com privacy policy that was archived on 2014-02-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20140226181030id_/http%3A//www.chroniclebooks.com/privacy-policy) for the most accurate reproduction.-->
 
-<!DOCTYPE html><html lang="en-us"><head>
+<!DOCTYPE html><html lang="en-us"><head><script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0013/4964.js?439011" async="" type="text/javascript"></script><script type="text/javascript">window.NREUM||(NREUM={}),__nr_require=function a(b,c,d){function e(f){if(!c[f]){var g=c[f]={exports:{}};b[f][0].call(g.exports,function(a){var c=b[f][1][a];return e(c?c:a)},g,g.exports,a,b,c,d)}return c[f].exports}for(var f=0;f<d.length;f++)e(d[f]);return e}({"4O2Y62":[function(a,b){function c(a,b){var c=d[a];return c?c.apply(this,b):(e[a]||(e[a]=[]),void e[a].push(b))}var d={},e={};b.exports=c,c.queues=e,c.handlers=d},{}],handle:[function(a,b){b.exports=a("4O2Y62")},{}],YLUGVp:[function(a,b){function c(){var a=m.info=NREUM.info;if(a&&a.agent&&a.licenseKey&&a.applicationID){m.proto="https"===l.split(":")[0]||a.sslForHttp?"https://":"http://",g("mark",["onload",f()]);var b=i.createElement("script");b.src=m.proto+a.agent,i.body.appendChild(b)}}function d(){"complete"===i.readyState&&e()}function e(){g("mark",["domContent",f()])}function f(){return(new Date).getTime()}var g=a("handle"),h=window,i=h.document,j="addEventListener",k="attachEvent",l=(""+location).split("?")[0],m=b.exports={offset:f(),origin:l};i[j]?(i[j]("DOMContentLoaded",e,!1),h[j]("load",c,!1)):(i[k]("onreadystatechange",d),h[k]("onload",c)),g("mark",["firstbyte",f()])},{handle:"4O2Y62"}],loader:[function(a,b){b.exports=a("YLUGVp")},{}]},{},["YLUGVp"]);</script>
         <meta charset="utf-8">
-        <script src="https://dnn506yrbagrg.cloudfront.net/pages/scripts/0013/4964.js?439011" async="" type="text/javascript"></script><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script><title>Privacy Policy</title>
+        <title>Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="description" content="Find bestselling cookbooks, children's books, journals, personalized books &amp; gifts for kids, craft, art &amp; design, pop culture, and more at Chronicle Books, an independent publisher.">
 <meta name="keywords" content="privacy policy">
@@ -33,7 +33,7 @@
 <link rel="stylesheet" type="text/css" href="http://www.chroniclebooks.com/skin/frontend/enterprise/default/css/widgets.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.chroniclebooks.com/skin/frontend/enterprise/cbooks/css/menu.css" media="all">
 <link rel="stylesheet" type="text/css" href="http://www.chroniclebooks.com/skin/frontend/enterprise/cbooks/css/local.css" media="all">
-<script type="text/javascript" src="http://www.chroniclebooks.com/media/js/20eb5b4c81202c352a27a1b3df5f827f.js"></script>
+<script type="text/javascript" src="http://www.chroniclebooks.com/media/js/e2be5eeb98bf61f452bf2e70fd5ba9f6.js"></script>
 <!--[if lt IE 8]>
 <link rel="stylesheet" type="text/css" href="http://www.chroniclebooks.com/skin/frontend/enterprise/cbooks/css/styles-ie.css" media="all" />
 <![endif]-->
@@ -101,7 +101,7 @@ _gaq.push(['_trackPageview']);
     <div class="container">
         <div class="title"><i class="icon-truck"></i> Free Shipping</div>
         <div class="content">
-            <span class="short">on Reg. Orders $25+ and Pers. Orders $75+</span>
+           <span class="short">on Reg. Orders $25+ and Pers. Orders $75+</span>
             <span class="medium">on Reg. Orders $25+ and Personalized Orders $75+</span>
             <span class="long">for Personalized Orders $75+ and Regular Orders $25+</span>
         </div>
@@ -119,15 +119,31 @@ _gaq.push(['_trackPageview']);
 		<div class="page-left">
             <div class="header-container">
     <div class="header group">
-                <a href="http://www.chroniclebooks.com/" title="Chronicle Books" class="logo"><strong>Chronicle Books</strong><img src="http://www.chroniclebooks.com/skin/frontend/enterprise/cbooks/images/logo.gif" alt="Chronicle Books"></a>
-        		<div class="top-links">
-        <div class="quick-access">
-            <p class="welcome-msg">Shop our selection of books, gifts and stationery</p>
+                    <a href="http://www.chroniclebooks.com/" title="Chronicle Books" class="logo"><strong>Chronicle Books</strong><img src="http://www.chroniclebooks.com/skin/frontend/enterprise/cbooks/images/logo.gif" alt="Chronicle Books"></a>
+                <form id="search_mini_form" action="http://www.chroniclebooks.com/catalogsearch/result/" method="get">
+    <div class="form-search">
+        <label for="search">Search:</label>
+        <input id="search" type="text" name="q" value="" class="input-text">
+        <button type="submit" title="Search" class="button"><span>Search</span></button>
+        <div id="search_autocomplete" class="search-autocomplete"></div>
+        <script type="text/javascript">
+        //<![CDATA[
+            var searchForm = new Varien.searchForm('search_mini_form', 'search', 'Search by title, author, or keyword');
+            searchForm.initAutocomplete('http://www.chroniclebooks.com/catalogsearch/ajax/suggest/', 'search_autocomplete');
+        //]]>
+        </script>
+    </div>
+<!--span class="search_help"><a href="#">Help</a></span>
+<div class="search_help_detail" id="search_help"><h2>Search Criteria</h2><p>Exact matches can be searched for by enclosing keywords in double quotes. For example, "Eat Like a Man" would generate a result set which matches the exact string.</p></div-->
+</form>
+        <div class="top-links">
+            <div class="quick-access">
+                <p class="welcome-msg">Shop our selection of books, gifts and stationery</p>
+                            </div>
                     </div>
-            </div>
-</div>
+    </div>
 
-<div class="nav-container">
+    <div class="nav-container">
     <ul id="anav">
             <li class="level0  cms-home " id="dropdown">
 <span><a id="downArrow" href="javascript:void(0)">See More<img style="margin-top: 14px; margin-left: 5px;" src="/skin/frontend/enterprise/cbooks/images/arrow.gif" alt="Click to see All Titles"></a></span>
@@ -494,36 +510,20 @@ _gaq.push(['_trackPageview']);
 </li>
     </ul>
 <!-- </div> -->
-<div class="top"><ul class="links">
+    <div class="top"><ul class="links">
                         <li class="first"><a href="http://www.chroniclebooks.com/checkout/cart/" title="Cart" class="top-link-cart">Cart</a></li>
                                 <li><a href="https://www.chroniclebooks.com/customer/account/" title="My Account">| My Account</a></li>
-                                <li class=" last"><a href="https://www.chroniclebooks.com/customer/account/login/referer/aHR0cDovL3d3dy5jaHJvbmljbGVib29rcy5jb20vY21zL3BhZ2Uvdmlldy9wYWdlX2lkLzIwNS8,/" title="Log-in">Log-in</a></li>
+                                <li class=" last"><a href="https://www.chroniclebooks.com/customer/account/login/" title="Log-in">Log-in</a></li>
             </ul>
 </div>
 
 </div>
 </div><!-- Ending topnav -->
-<form id="search_mini_form" action="http://www.chroniclebooks.com/catalogsearch/result/" method="get">
-    <div class="form-search">
-        <label for="search">Search:</label>
-        <input id="search" type="text" name="q" value="" class="input-text">
-        <button type="submit" title="Search" class="button"><span>Search</span></button>
-        <div id="search_autocomplete" class="search-autocomplete"></div>
-        <script type="text/javascript">
-        //<![CDATA[
-            var searchForm = new Varien.searchForm('search_mini_form', 'search', 'Search by title, author, or keyword');
-            searchForm.initAutocomplete('http://www.chroniclebooks.com/catalogsearch/ajax/suggest/', 'search_autocomplete');
-        //]]>
-        </script>
-    </div>
-<!--span class="search_help"><a href="#">Help</a></span>
-<div class="search_help_detail" id="search_help"><h2>Search Criteria</h2><p>Exact matches can be searched for by enclosing keywords in double quotes. For example, "Eat Like a Man" would generate a result set which matches the exact string.</p></div-->
-</form>
                         <div class="breadcrumbs">
     <ul>
                     <li class="home">
                             <a href="http://www.chroniclebooks.com/" title="Go to Home Page">Home</a>
-                                        <span>/ </span>
+                                        <span>→ </span>
                         </li>
                     <li class="cms_page">
                             <strong>Privacy Policy</strong>
@@ -819,7 +819,7 @@ Copyright © 1996-2012 Chronicle Books LLC. All rights reserved. No material her
 <div class="modal hide fade" id="CloseModal">
   <div class="modal-header">
     <!--button class="close" data-dismiss="modal">×</button-->
-    <h3>Hey! Wait A Second!</h3>
+    <h3>Hey, wait a second!</h3>
   </div>
   <div class="modal-body">
     <p>If you leave now without finalizing your purchase, your work will be lost.</p>
@@ -856,6 +856,6 @@ var b=document.getElementsByTagName("script")[0];
 a.src=document.location.protocol+"//dnn506yrbagrg.cloudfront.net/pages/scripts/0013/4964.js?"+Math.floor(new Date().getTime()/3600000);
 a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
 </script>
-<script type="text/javascript">if(!NREUMQ.f){NREUMQ.f=function(){NREUMQ.push(["load",new Date().getTime()]);var e=document.createElement("script");e.type="text/javascript";e.src=(("http:"===document.location.protocol)?"http:":"https:")+"//"+"js-agent.newrelic.com/nr-100.js";document.body.appendChild(e);if(NREUMQ.a)NREUMQ.a();};NREUMQ.a=window.onload;window.onload=NREUMQ.f;};NREUMQ.push(["nrfj","beacon-6.newrelic.com","002180cd7f","1450890,1451072","ZAEHMUZVXxVTURYICV1LJAZAXV4IHVEPEklDBQIAG0JYA0U=",0,489,new Date().getTime(),"","","","",""]);</script>
+<script type="text/javascript">window.NREUM||(NREUM={});NREUM.info={"beacon":"beacon-6.newrelic.com","licenseKey":"002180cd7f","applicationID":"1450890,1451072","transactionName":"ZAEHMUZVXxVTURYICV1LJAZAXV4IHVEPEklDBQIAG0JYA0U=","queueTime":0,"applicationTime":460,"ttGuid":"","agentToken":"","userAttributes":"","errorBeacon":"jserror.newrelic.com","agent":"js-agent.newrelic.com\/nr-314.min.js"}</script>
 
-<div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" style="display: none; padding-bottom: 42px; padding-right: 42px;"><div id="cboxWrapper"><div><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxLoadedContent" style="width: 0px; height: 0px; overflow: hidden; float: left;"></div><div id="cboxLoadingOverlay" style="float: left;"></div><div id="cboxLoadingGraphic" style="float: left;"></div><div id="cboxTitle" style="float: left;"></div><div id="cboxCurrent" style="float: left;"></div><div id="cboxNext" style="float: left;"></div><div id="cboxPrevious" style="float: left;"></div><div id="cboxSlideshow" style="float: left;"></div><div id="cboxClose" style="float: left;"></div></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none;"></div></div><script type="text/javascript" src="https://js-agent.newrelic.com/nr-100.js"></script></body></html>
+<div id="cboxOverlay" style="display: none;"></div><div id="colorbox" class="" style="display: none; padding-bottom: 42px; padding-right: 42px;"><div id="cboxWrapper"><div><div id="cboxTopLeft" style="float: left;"></div><div id="cboxTopCenter" style="float: left;"></div><div id="cboxTopRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxMiddleLeft" style="float: left;"></div><div id="cboxContent" style="float: left;"><div id="cboxLoadedContent" style="width: 0px; height: 0px; overflow: hidden; float: left;"></div><div id="cboxLoadingOverlay" style="float: left;"></div><div id="cboxLoadingGraphic" style="float: left;"></div><div id="cboxTitle" style="float: left;"></div><div id="cboxCurrent" style="float: left;"></div><div id="cboxNext" style="float: left;"></div><div id="cboxPrevious" style="float: left;"></div><div id="cboxSlideshow" style="float: left;"></div><div id="cboxClose" style="float: left;"></div></div><div id="cboxMiddleRight" style="float: left;"></div></div><div style="clear: left;"><div id="cboxBottomLeft" style="float: left;"></div><div id="cboxBottomCenter" style="float: left;"></div><div id="cboxBottomRight" style="float: left;"></div></div></div><div style="position: absolute; width: 9999px; visibility: hidden; display: none;"></div></div><script src="https://js-agent.newrelic.com/nr-314.min.js"></script></body></html>
